--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,4 +24,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm run build --if-present
+    - run: npm install
+    - run: npm run lint --if-present
+    - run: |
+           touch .env
+           echo "${{ secrets.ENV }}" > .env
+    - run: pm2 restart guestara
